2009-12-27  Christopher Bratusek <zanghar@freenet.de>
	* configure.in: improve configures help message for better readability [Kim B. Heino]

	* lisp/sawfish/wm/workspace.jl
	* src/display.c: s/sawmill/sawfish/ [Kim B. Heino]

	* man/sawfish.texi: small misstake in doc

2009-12-22  Christopher Bratusek <zanghar@freenet.de>
	* man/news.texi: revised

	* KEYBINDINGS: more description on KeyPad

	* README.IMPORTANT: updated

	* debian/changelog: removed, generated from .in file

	== 1.6.1 ==

	* configure.in: post-release version-bump to 1.6.1 "Astral"
			--without-nine-mouse-buttons is not allowed to have 4 hyphens,
			so it's now --without-nine-mousebuttons

	* sawfish.spec.in: small fixup [Kim B. Heino]

2009-12-21  Christopher Bratusek <zanghar@freenet.de>
	* po/sawfish.pot: updated

	* man/sawfish.texi: added doc for popup-window-list-menu

	* configure.in: different code name (I don't want to have the same for RC and Stable)

2009-12-19  Christopher Bratusek <zanghar@freenet.de>
	* po/sawfish.pot: added sawfish.pot to the tree, as intltool + sawfish is a no-go currently

2009-12-19  Teika Kazura <teika@lavabit.com>
       * lisp/sawfish/wm/ext/infinite-desktop.jl
       * OPTIONS
       * man/sawfish.texi: Give short description on "infinite desktop". Docstrings. Small clean up.

2009-12-18  Christopher Bratusek <zanghar@freenet.de>
	* po/POTFILES.in: recreated file

	* po/*.po: regenerated

	* po/make-pot: make this work in an empty tree

2009-12-15  Teika Kazura <teika@lavabit.com>
	* man/news.texi: News items for 'libexec' -> 'lib' change, and need for sawfish-pager recompilation.

	* lisp/sawfish/wm/ext/match-window.jl
	* lisp/sawfish/wm/state/maximize.jl
	* lisp/sawfish/wm/util/edges.jl
	* lisp/sawfish/wm/viewport.jl
	* man/sawfish.texi: Renamed 'viewport-offset-pixel' to 'viewport-offset-coord'.

	* lisp/sawfish/wm/state/maximize.jl
	* lisp/sawfish/wm/viewport.jl
	* man/news.texi