@@ -1,3 +1,8 @@
+2009-12-28  Christopher Bratusek <zanghar@freenet.de>
+	* configure.in: use `kde4-config --install data' instead of `kde4-config --path data' [Kim B. Heino]
+
+	* sawfish.spec.in: find kde4/librep directories while runtime instead of hardcoding [Kim B. Heino]
+
 2009-12-27  Christopher Bratusek <zanghar@freenet.de>
 	* configure.in: improve configures help message for better readability [Kim B. Heino]
 
